--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <script>
+      window.MathJax = {
+            tex: {
+                inlineMath: [
+                    ['$', '$'],
+                    ['\\(', '\\)']
+                ], // ⾏内公式选择符
+                displayMath: [
+                    ['$$', '$$'],
+                    ['\\[', '\\]']
+                ] // 段内公式选择符
+            },
+            options: {
+                skipHtmlTags: ['script', 'noscript','style', 'textarea', 'pre', 'code',
+                'a'], // 避开某些标签
+                ignoreHtmlClass: 'tex2jax_ignore',
+                processHtmlClass: 'tex2jax_process'
+            }
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script"></script>    
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
